# pantry

./: .gitignore  README.md  README2.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test.yml
models/: README.md  index.json
src/: App.tsx  Notifications.tsx  Router.tsx  context.tsx  interfaces.ts  main.tsx  registryHelpers.tsx  rustToTS.ts  sakura.css  styles.css  theme.d.ts  theme.tsx  wydr.ts
src-tauri/: .env  Cargo.toml  Info.plist  sqlite_dev.sqlite  tauri.conf.json
src-tauri/icons/: tauri-icon-bw-1024.icns
src-tauri/migrations/2023-07-09-170211_create/: down.sql  up.sql
src-tauri/migrations/2023-07-13-220224_create_superuser/: up.sql
src-tauri/migrations/2023-07-15-194614_create_thread_to_local/: down.sql  up.sql
src-tauri/migrations/2023-07-30-025747_request_completed/: down.sql  up.sql
src-tauri/migrations/2023-07-30-230159_request_accepted_and_view_llm/: down.sql  up.sql
src-tauri/migrations/2023-08-08-040020_bare_model_pre_post_prompt/: down.sql  up.sql
src-tauri/src/: cli.rs  database.rs  database_types.rs  emitter.rs  error.rs  frontend.rs  listeners.rs  llm.rs  main.rs  registry.rs  request.rs  schema.rs  server.rs  state.rs  user.rs
src-tauri/src/connectors/: factory.rs  generic.rs  llm_actor.rs  llm_manager.rs  llmrs.rs  mod.rs  openai.rs  registry.rs
src/components/: HistoryCard.tsx  InnerCard.tsx  LLMAvailableInfo.tsx  LLMDownloadableInfo.tsx  LLMInfo.tsx  LLMLiveInfo.tsx  LLMOnlineInfo.tsx  LLMRequestInfo.tsx  LLMRunningInfo.tsx
src/pages/: AvailableLLMs.tsx  DownloadableLLMs.tsx  History.tsx  Home.tsx  Requests.tsx  Settings.tsx
src/types/: additional.d.ts
