[package]
name = "pantry"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["http-request", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
chrono = { version="0.4.24", features = ["serde", "rustc-serialize"] }
dashmap = { version="5.4.0", features = ["serde"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
bincode = "1.3.3"
keyring = "2.0.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tiny-tokio-actor = "0.3.3"
quick-error = "2.0.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
