[package]
name = "pantry"
version = "0.0.0"
description = "Pantry is an LLM manager, and it's not intended to be installed via Cargo."
authors = ["julia@jmerz.is"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/JuliaMerz/pantry"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = ["clipboard-write-text", "http-request", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
chrono = { version = "0.4.24", features = ["serde", "rustc-serialize"] }
dashmap = { version = "5.4.0", features = ["serde"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
bincode = "1.3.3"
keyring = "2.0.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tiny-tokio-actor = "0.3.3"
quick-error = "2.0.1"
uuid = { version = "1.3.4", features = ["serde"] }
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
tauri-plugin-deep-link = { git= "https://github.com/FabianLars/tauri-plugin-deep-link", branch="main" }
reqwest = { version = "0.11.18", features = ["serde_json", "stream"] }
futures-util = "0.3"
rmp-serde = "1.1.1"
base64 = "0.21.2"
rand = "0.8.5"
tokio-util = "0.7.8"
axum = "0.6.18"
axum-macros = "0.3.8"
hyper = "0.14"
diesel_migrations = {version = "2.1.0", features = ["sqlite"] }
diesel = { version="2.1.0", features = ["sqlite", "uuid", "serde_json", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
r2d2 = "0.8.10"
futures = "0.3.28"
url = { version = "2", features = ["serde"] }
tokio-stream = "0.1.14"

[target.'cfg(not(windows))'.dependencies]
hyperlocal = { version = "0.8" }







[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
